--- a/chess/chess.css
+++ b/chess/chess.css
@@ -3,5 +3,13 @@ html body {
 }
 
 .knight.white {
-    background-image: url('/image/chess/ChessLionWhite.svg') !important;
+    background-image: url('https://raw.githubusercontent.com/JameswDemps/chrome-extension/main/image/chess/ChessLionWhite.svg') !important;
+}
+
+.knight.black {
+    background-image: url('https://raw.githubusercontent.com/JameswDemps/chrome-extension/main/image/chess/ChessLionWhite.svg') !important;
+}
+
+#board-play-board .piece.wn {
+    background-image: url('https://raw.githubusercontent.com/JameswDemps/chrome-extension/main/image/chess/ChessLionWhite.svg') !important;
 }
